# token-quota-widget

./: LICENSE  README.en.md  README.md  install.ps1  install.sh  pyproject.toml  token-quota-widget.desktop.in  token-quota-widget.in  uninstall.ps1  uninstall.sh
tests/: test_api.py  test_config.py  test_font_loader.py  test_instance_lock.py  test_ui.py
token_quota_widget/: __init__.py  __main__.py  api.py  config.py  font_loader.py  formatting.py  i18n.py  instance_lock.py  ui.py
token_quota_widget/fonts/: NOTICE.md
