[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "token-quota-widget"
version = "0.2.0"
description = "A minimal transparent desktop widget for the Quota Share API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Token Quota Widget contributors" }]
dependencies = []

[project.scripts]
token-quota-widget = "token_quota_widget.ui:main"

[tool.setuptools.packages.find]
include = ["token_quota_widget*"]
